--- a/examples/pytorch.yaml
+++ b/examples/pytorch.yaml
@@ -7,8 +7,8 @@ experiment_name: pytorch_inference_cuda_gpt_1.3B_fp16_qint8
 model: cerebras/Cerebras-GPT-1.3B
 device: cuda
 
-benchmark:
-  profile: true
+# benchmark:
+#   profile: true
 
 backend:
   device_map: auto
