--- a/examples/pytorch.yaml
+++ b/examples/pytorch.yaml
@@ -2,7 +2,7 @@ defaults:
   - base_config # inherits from base config
   - _self_ # for hydra 1.1 compatibility
 
-experiment_name: pytorch_inference_cuda_gpt_1.3B_fp16_qint8
+experiment_name: pytorch_inference_cuda_gpt_1.3B_fp16
 
 model: cerebras/Cerebras-GPT-1.3B
 device: cuda
